Got the game controller communicating with the drawing panel, implemented most of recieving data from the server.

--- a/TankWars/GameController/GameController.csproj
+++ b/TankWars/GameController/GameController.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Models\Models.csproj" />
     <ProjectReference Include="..\NetworkController\NetworkController.csproj" />
   </ItemGroup>
 
