Implemented all drawing except beams. Bug fixes

--- a/TankWars/Resources/Resources.csproj
+++ b/TankWars/Resources/Resources.csproj
@@ -52,18 +52,15 @@
     <Content Include="Images\PurpleTurret.png" />
     <Content Include="Images\RedTank.png" />
     <Content Include="Images\RedTurret.png" />
-    <Content Include="Images\shot-blue.png" />
+    <Content Include="Images\shot-black.png" />
     <Content Include="Images\shot-brown.png" />
     <Content Include="Images\shot-green.png" />
-    <Content Include="Images\shot-grey.png" />
     <Content Include="Images\shot-red.png" />
     <Content Include="Images\shot-violet.png" />
     <Content Include="Images\shot-white.png" />
     <Content Include="Images\shot-yellow.png" />
     <Content Include="Images\shot_blue.png" />
     <Content Include="Images\shot_grey.png" />
-    <Content Include="Images\shot_red_new.png" />
-    <Content Include="Images\shot_violet.png" />
     <Content Include="Images\WallSprite.png" />
     <Content Include="Images\YellowTank.png" />
     <Content Include="Images\YellowTurret.png" />
