--- a/TankWars/Resources/Resources.csproj
+++ b/TankWars/Resources/Resources.csproj
@@ -66,6 +66,7 @@
     <Content Include="Images\YellowTank.png" />
     <Content Include="Images\YellowTurret.png" />
     <Content Include="README.txt" />
+    <Content Include="settings.xml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
